[package]
name = "port-knocking-doors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
envmnt = "0.9.1"
clap = { version = "3.0", features = ["derive"] }
regex = "1"
lazy_static = "1.4.0"
crossbeam-channel = "0.5.2"
mut_static = "5.0.0"
