[package]
name = "port-knocking-doors"
version = "0.2.0"
author = "robin.pernaudat@gmail.com"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
envmnt = "0.9.1"
clap = { version = "3.0", features = ["derive"] }
regex = "1"
crossbeam-channel = "0.5.2"

