[package]
name = "port-knocking-doors"
version = "1.0.1"
authors = ["robin.pernaudat@gmail.com"]
edition = "2021"
license = "GPL-3.0-only"
description = "This a port knocking doors. It work with firewalld on Linux servers."
repository = "https://github.com/robinpernaudat/port-knocking-doors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
log = "0.4.14"
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
envmnt = "0.9.1"
clap = { version = "3.0", features = ["derive"] }
regex = "1"
crossbeam-channel = "0.5.2"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
dirs = "4.0"